test/fail/errors/DelayedButNotCoinductive.agda
module DelayedButNotCoinductive where

data D : Set where
  d : D

x : D
x ~ d
